se traducen texto en gramatica y dashboard

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -127,6 +127,8 @@ csv.date=The format must be dd/mm/yyyy
 csv.level=A1,A2,B1,B2,C1,C2 allowed values
 csv.gender=Put M o F
 msj.nivel=Student's level updated
+sube.nivel=Are you sure you want to move this student up? Not all level activities have been accomplished.
+msj.termina=To grade this, an 80% of the tasks must be answered
 
 
 #unicode
