Mapeo de titulos modulo coordinador, vista dashboard.xhtml

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -71,7 +71,7 @@ tareas.alumno.table.games=word game
 tareas.alumno.map.mental=think-develop and share
 tareas.alumno.map.match=mix\u0022match
 tareas.alumno.map.filling=gap filling
-tareas.alumno.map.happened=what happened
+tareas.alumno.map.happened=what happened?
 tareas.alumno.map.comprehension=comprehension match
 tareas.alumno.nickname=nickname
 tareas.alumno.level=lenguage level
@@ -111,6 +111,8 @@ total.answers=total
 #no-grupo.xhtml
 no.grupo.title=This is not your class
 no.grupo.message=This class was not assigned 
+
+
 
 
 #calificacion-mapamental.xhtml
