Mapeo de titulos modulo profesor, vista detalle-profesor/admin-alumnos/tarea-alumnos

--- a/tecolotl-web/src/main/resources/profesor_en.properties
+++ b/tecolotl-web/src/main/resources/profesor_en.properties
@@ -30,6 +30,8 @@ student.administration.title.students.class=students
 student.administration.colum.name=name
 student.administration.title.passwords=Password
 student.administration.error=Ther's no school year.
+student.administration.message.three.columns=10/10/1 -> answered/total assigned/graded
+student.administration.message.two.columns=10/10 -> answered/total assigned
 passwords=Passwords
 download=Download
 report=Report
@@ -106,7 +108,10 @@ student.homework=HW
 #think-develop.and.share=Think-share and develop
 assignments.mind.map.tasks=Graphic organizers tasks
 finished=answered
-total.answers=total 
+total.answers=total
+total.filters.assigned=HW asignado:
+total.filters.task=TASK count:
+total.filters.average=Grade average:
 
 #no-grupo.xhtml
 no.grupo.title=This is not your class
